# simple-gl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
demos/: basic_demo.h  map_import_demo.h  map_loading_demo.h  test_chamber_demo.h
entities/: input.cpp  input.h  mesh_data.cpp  mesh_data.h  node.cpp  node.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  window.cpp  window.h
entities/components/: camera.cpp  camera.h  component.cpp  component.h  free_controller.cpp  free_controller.h  light.cpp  light.h  mesh.cpp  mesh.h  portal.cpp  portal.h  rigid_body.cpp  rigid_body.h  transform.cpp  transform.h
entities/components/controllers/: character_controller.cpp  character_controller.h  free_controller.cpp  free_controller.h
entities/components/portal/: portal_bullet.cpp  portal_bullet.h  portal_fps_controller.cpp  portal_fps_controller.h  teleportable.cpp  teleportable.h
entities/physics/: contact_callback.cpp  contact_callback.h  sweep_callback.cpp  sweep_callback.h
helpers/: converter.cpp  converter.h  errors.cpp  errors.h  logger.cpp  logger.h  node_logger.cpp  quick_accessors.cpp  quick_accessors.h
managers/: engine.cpp  engine.h  map_loader.cpp  map_loader.h  mesh_manager.cpp  mesh_manager.h  metrics_manager.cpp  metrics_manager.h  physics_manager.cpp  physics_manager.h  settings_manager.cpp  settings_manager.h  shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h  window_manager.cpp  window_manager.h
render-pipeline/: screenFrameBuffer.cpp  screenFrameBuffer.h  screen_frame_buffer.cpp  window_panel.cpp
render-pipeline/framebuffers/: base_frame_buffer.cpp  base_frame_buffer.h  msaa_frame_buffer.cpp  msaa_frame_buffer.h  screen_frame_buffer.cpp  screen_frame_buffer.h
render-pipeline/portal/: portal.cpp  portal.h  portal_framebuffer.cpp  portal_framebuffer.h
resources/: blender_export_map.py  export_map.py  mapMin.blend
resources/maps/: blender_export.json  level.txt  object_test_demo.json
resources/shaders/basic/: fragment.glsl  vertex.glsl
resources/shaders/blinn-phong/: fragment.glsl  vertex.glsl
resources/shaders/blinn-phong-solid-color/: fragment.glsl  vertex.glsl
resources/shaders/frame/: basic-fragment.glsl  hdr-fragment.glsl  vertex.glsl
resources/shaders/shaded-solid-color/: fragment.glsl
resources/shaders/skybox/: fragment.glsl  vertex.glsl
resources/shaders/solid-color/: fragment.glsl  vertex.glsl
resources/shaders/tail-portal/: fragment.glsl  vertex.glsl
tests/: test.cpp  test.h
window/: input.cpp  window_panel.cpp  window_panel.h
window/framebuffers/: msaa_frame_buffer.h  screen_frame_buffer.cpp  screen_frame_buffer.h
